<resources>
    <string name="app_name">FM Radio New</string>
    <string name="tx_app_name">FM Tx New</string>
    <string name="default_sleep" />
    <string name="menu_add_to_preset">Add to Presets</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_record_start">Start Recording</string>
    <string name="menu_record_stop">Stop Recording</string>
    <string name="menu_all_channels">All Channels</string>
    <string name="app_label_all_channels">All Channels</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="error_sdcard_access">Unable to access SD card</string>
    <string name="fm_service_started">FM Service</string>
    <string name="menu_sleep">Sleep</string>
    <string name="menu_sleep_cancel">Cancel Sleep</string>
    <string name="menu_wired_headset">Wired Headset</string>
    <string name="menu_speaker_on">Enable Speaker</string>
    <string name="menu_display_tags">Show Tags</string>
    <string name="menu_speaker_off">Disable Speaker</string>
    <string name="menu_scan_start">Scan</string>
    <string name="menu_scan_stop">Stop Searching</string>
    <string name="menu_stats">FM RF Stats</string>
    <string name="button_text_stop">Stop</string>
    <string name="msg_seeking">Searching FM Station</string>
    <string name="msg_scanning">Scanning for all FM Stations</string>
    <string name="msg_scanning_pty">Scanning for %1$s</string>
    <string name="msg_search_title">FM - %1$s</string>
    <string name="msg_searching">Searching for Strong Stations to create a Preset List</string>
    <string name="msg_searching_title">Auto-Select Presets</string>
    <string name="msg_weak_searching">Searching for frequencies to transmit</string>
    <string name="msg_noantenna">Please plug in a Headset to use FM Radio</string>
    <string name="msg_headsetpluggedin">Disconnect all Headsets for using FM Tx</string>
    <string name="msg_callactive">FM Tx is not supported when there is active voice call</string>
    <string name="dialog_sleep_title">Select Auto-Off Sleep Time</string>
    <string name="preset_select_name">Select %1$s</string>
    <string name="presetlist_select_name">Select %1$s</string>
    <string name="presetlist_add_new">Add New List</string>
    <string name="dialog_presetlist_title">Preset Lists</string>
    <string name="presetlist_prefix_name">FM -</string>
    <string name="dialog_presetlist_rename_title">Enter a name</string>
    <string name="dialog_preset_rename_title">Enter a name</string>
    <string name="presetlist_delete_name">Delete %1$s and its Stations?</string>
    <string name="presetlist_autoselect_title">Confirm Auto-Select</string>
    <string name="presetlist_autoselect_name">Auto-Select will delete all the Presets in the list %1$s, Continue?</string>
    <string name="fmtx_autoselect_name">Auto-Select will delete all the Presets, Continue?</string>
    <string name="enter_frequency">Tune to Station</string>
    <string name="enter_new_frequency_title">Enter Frequency</string>
    <string name="preset_now_playing">Now Playing</string>
    <string name="preset_pref_title">%1$s (%2$s)</string>
    <string name="preset_delete_title">Delete Preset</string>
    <string name="preset_delete_name">Delete %1$s from %2$s</string>
    <string name="preset_confirm_delete_name">Delete %1$s from %2$s ?</string>
    <string name="preset_name_dialog_title">Enter a name</string>
    <string name="preset_name_summary">%1$s</string>
    <string name="preset_name_title">Rename</string>
    <string name="preset_search_title">Search</string>
    <string name="preset_search_name">Search for %1$s</string>
    <string name="preset_preference_title">FM Stations in %1$s</string>
    <string name="preset_empty_title">No Stations in the List</string>
    <string name="preset_empty_add_summary">Add Stations</string>
    <string name="preset_add">Add</string>
    <string name="preset_replace">Replace</string>
    <string name="preset_tune">Tune</string>
    <string name="preset_rename">Rename</string>
    <string name="preset_delete">Delete</string>
    <string name="preset_search">Search for %1$s</string>
    <string name="stat_notif_frequency">FM Radio Station %1$s MHz</string>
    <string name="stat_notif_tx_frequency">FM Transmitting at: %1$s</string>
    <string name="sel_band_menu">Select Regional Band</string>
    <string name="test_menu">Select Test</string>
    <string name="settings_menu">Settings</string>
    <string name="regional_band">Regional Band</string>
    <string name="aud_output_mode">Audio Output Mode</string>
    <string name="sel_audio_output">Select Audio Output</string>
    <string name="record_dur">Record Duration</string>
    <string name="sel_rec_dur">Select Record Duration</string>
    <string name="auto_select_af">Alternate Frequency</string>
    <string name="auto_select_af_enabled">Auto Select Enabled</string>
    <string name="auto_select_af_disabled">Auto Select Disabled</string>
    <string name="fac_defaults">Revert to Factory Defaults</string>
    <string name="revert_to_fac">Revert to Factory Defaults</string>
    <string name="settings_back">Back</string>
    <string name="settings_revert_confirm_title">Confirm Reset Settings</string>
    <string name="settings_revert_confirm_msg">This will delete all settings including Presets</string>
    <string name="settings_back_summary">Return to previous view</string>
    <string name="settings_revert_defaults_title">Revert to Factory Defaults</string>
    <string name="settings_revert_defaults_summary">Reset all settings</string>
    <string name="audio_type_stereo">Stereo</string>
    <string name="audio_type_mono">Mono</string>
    <string name="default_band">United States</string>
    <string name="default_audio">Stereo</string>
    <string name="default_record_duration">5 minutes</string>
    <string name="factory_reset_dialog_title">Confirm Reset</string>
    <string name="factory_reset_dialog_message">This will delete all settings including Presets</string>
    <string name="station_move">Move</string>
    <string name="station_edit">Edit</string>
    <string name="no_storage">Mount SD card before start recording.</string>
    <string name="preparing_sd">Preparing SD card</string>
    <string name="access_sd_fail">"Couldn't access SD card."</string>
    <string name="spaceIsLow_content">Your SD card storage is running out of space. Change the quality setting or delete some images or other files.</string>
    <string name="FMRecording_reach_size_limit">Size limit reached.</string>
    <string name="delete_station_title">Delete</string>
    <string name="find_af_station">Find</string>
    <string name="menu_add_list">Add List</string>
    <string name="menu_rename_list">Rename List</string>
    <string name="menu_reorder_list">Reorder List</string>
    <string name="menu_scan_for_preset">Scan for Presets</string>
    <string name="menu_delete_list">Delete List</string>
    <string name="alert_dialog_ok">Ok</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_hint">Enter a name</string>
    <string name="search_dialog_title">Scan Stations</string>
    <string name="search_category_key">search_category_type</string>
    <string name="search_category">Select Search Type</string>
    <string name="search_category_title">Search Type</string>
    <string name="default_search_category">Seek</string>
    <string name="search_category_tune">Tune</string>
    <string name="search_category_type_key">search_category_value_type</string>
    <string name="search_category_type">Select Search by Program Type</string>
    <string name="search_category_type_title">Search by Program Type</string>
    <string name="default_search_category_type">All Stations</string>
    <string name="presets_back">Back</string>
    <string name="presets_back_summary">Return to previous view</string>
    <string name="nav_mode_presets">Presets</string>
    <string name="nav_mode_stations">Stations</string>
    <string name="prog_service_string" />
    <string name="radio_text_string">This is the long Radio Text String Message that needs to scroll</string>
    <string name="eradio_text_string">Extended Radio Text Message</string>
    <string name="pty_string" />
    <string name="frequency_string" />
    <string name="station_id_string" />
    <string name="fm_command_timeout_title">Timeout</string>
    <string name="fm_tune_timeout_msg">No response received to Tune FM Station. If problem persists, please turn off FM and turn it back on.</string>
    <string name="fm_command_failed_title">FM Operation failed</string>
    <string name="fm_cmd_failed_msg">FM operation failed. If problem persists, please turn off FM and turn it back on.</string>
    <string name="fm_cmd_failed_msg_hdmi">FM operation failed. FM and HDMI concurrecny is not supported.</string>
    <string name="fm_cmd_failed_call_on">FM operation failed. FM audio is not allowed during call.</string>
    <string name="durationformat">%2$d:%5$02d</string>
    <string name="default_record" />
    <string name="default_preset_list_name">FM List</string>
    <string name="default_station">FM</string>
    <string name="default_blank" />
    <string name="add_station">+</string>
    <string name="stop_scanning">Stop Scanning</string>
    <string name="transmit_msg_string">Transmitting at:</string>
    <string name="audio_db_title_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="audio_db_artist_name">My FM recordings</string>
    <string name="audio_db_album_name">FM recordings</string>
    <string name="audio_db_playlist_name">FM recordings</string>
    <string name="test_prompt">Choose a test</string>
    <string name="test_run">Run Test</string>
    <string name="set_rmmsi_delta">Configure RMSSI Delta</string>
    <string name="set_sigth">Configure Signal Th</string>
    <string name="type_rd" />
    <string name="srch_params">Configure RMSSI Delta</string>
    <string name="srch_params_1">Configure Signal Th</string>
    <string name="enter_rssi">Enter RMSSI Delta</string>
    <string name="enter_sigth">Enter Signal Th</string>
    <string name="enter_SinrSmplsCnt">Enter SINR Samples Count</string>
    <string name="set_SinrSmplsCnt">Configure SINR Samples</string>
    <string name="enter_SinrTh">Enter SINR Threshold</string>
    <string name="set_SinrTh">Configure SINR Threshold</string>
    <string name="enter_IntfLowTh">Enter Intf Det Low Threshold</string>
    <string name="set_IntfLowTh">Config Intf Det Low Threshold</string>
    <string name="enter_IntfHighTh">Enter Intf Det High Threshold</string>
    <string name="set_IntfHighTh">Config Intf Det High Threshold</string>
    <string name="station_name">Station:</string>
    <string name="station_exists">This frequency already exists!</string>
    <string name="station_list_delete_station">Delete:%s</string>
    <string name="station_list_delete_station_prompt">Are you sure to delete %s .</string>
    <string name="station_name_empty">Station name is empty, please input again.</string>
    <string name="station_name_exist">There is already a station named \"%s\". Please input a different name.</string>
    <string name="enter_SinrFirstStage">Enter Sinr First Stage</string>
    <string name="set_SinrFirstStage">Config Sinr First Stage</string>
    <string name="enter_RmssiFirstStage">Enter Rmssi First Stage</string>
    <string name="search_algo_mpx">MPX_DCC Algo</string>
    <string name="search_algo_sinrint">SINR_INTF Algo</string>
    <string name="band_method_prompt">Select Method</string>
    <string name="enter_start_delay_time">Start Delay Time</string>
    <string name="enter_dwell_time">Dwell Time</string>
    <string name="band_sweep_setting">Sweep Setting</string>
    <string name="band_sweep_choose">Choose Band Sweep Method</string>
</resources>