<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="top" android:orientation="vertical" android:id="@id/station_info" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="0.0">
        <RelativeLayout android:id="@id/top_most" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@id/signal_level" android:paddingLeft="5.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_signal_2" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="14.0sp" android:textStyle="bold" android:id="@id/sleep_msg_tv" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:text="@string/default_sleep" android:drawableLeft="@drawable/count_down" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="14.0sp" android:textStyle="bold" android:id="@id/record_msg_tv" android:visibility="invisible" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:text="@string/default_record" android:drawableLeft="@drawable/recorder_start" />
            <TextView android:textAppearance="?android:textAppearanceSmall" android:textSize="13.0sp" android:id="@id/stereo_text_tv" android:paddingRight="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/default_audio" android:layout_alignBaseline="@id/signal_level" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
        </RelativeLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/station_frequency_row" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignWithParentIfMissing="true">
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="14.0sp" android:id="@id/call_sign_tv" android:paddingLeft="2.0dip" android:paddingTop="2.0dip" android:paddingRight="2.0dip" android:paddingBottom="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/station_id_string" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="14.0sp" android:id="@id/pty_tv" android:paddingLeft="2.0dip" android:paddingTop="2.0dip" android:paddingRight="2.0dip" android:paddingBottom="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pty_string" />
        </LinearLayout>
        <RelativeLayout android:id="@id/second_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:layout_marginTop="2.0dip" android:layout_marginRight="2.0dip" android:layout_marginBottom="2.0dip">
            <TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="25.0dip" android:gravity="center" android:id="@id/prog_frequency_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/frequency_string" android:layout_toLeftOf="@id/btn_forward" android:layout_toRightOf="@id/btn_back" />
            <ImageView android:id="@id/btn_back" android:paddingLeft="15.0dip" android:focusable="true" android:visibility="visible" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/btn_arrow_left" android:layout_alignParentLeft="true" android:layout_alignWithParentIfMissing="true" />
            <ImageView android:id="@id/btn_forward" android:paddingRight="15.0dip" android:focusable="true" android:visibility="visible" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/btn_arrow_right" android:layout_alignParentRight="true" android:layout_alignWithParentIfMissing="true" />
        </RelativeLayout>
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="15.0sp" android:textStyle="bold" android:gravity="center_horizontal" android:id="@id/radio_text_tv" android:paddingLeft="2.0dip" android:paddingTop="20.0dip" android:paddingRight="2.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/radio_text_string" android:singleLine="true" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="15.0sp" android:textStyle="bold" android:gravity="center_horizontal" android:id="@id/eradio_text_tv" android:paddingLeft="2.0dip" android:paddingRight="2.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/eradio_text_string" android:singleLine="true" />
    </LinearLayout>
</merge>