<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="horizontal" android:id="@id/message_row" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="14.0dip" android:textStyle="bold" android:id="@id/record_msg_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/default_record" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
        <Button android:textStyle="bold" android:layout_gravity="center" android:id="@id/btn_presets_list" android:layout_width="140.0dip" android:layout_height="45.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/default_preset_list_name" android:singleLine="true" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="14.0dip" android:textStyle="bold" android:id="@id/sleep_msg_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/default_sleep" android:layout_alignBaseline="@id/btn_presets_list" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/presets_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true">
        <LinearLayout android:gravity="center_horizontal" android:layout_gravity="center" android:orientation="horizontal" android:id="@id/presets_upper_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip">
            <Button android:id="@id/presets_button_1" android:layout_width="90.0dip" android:layout_height="55.0dip" android:layout_marginLeft="10.0dip" android:text="@string/default_station" />
            <Button android:id="@id/presets_button_2" android:layout_width="90.0dip" android:layout_height="55.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/default_station" />
            <Button android:id="@id/presets_button_3" android:visibility="visible" android:layout_width="90.0dip" android:layout_height="55.0dip" android:layout_marginRight="10.0dip" android:text="@string/default_station" />
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal" android:layout_gravity="center" android:orientation="horizontal" android:id="@id/presets_lower_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip">
            <Button android:id="@id/presets_button_4" android:layout_width="90.0dip" android:layout_height="55.0dip" android:layout_marginLeft="10.0dip" android:text="@string/default_blank" />
            <Button android:id="@id/presets_button_5" android:layout_width="90.0dip" android:layout_height="55.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/default_blank" />
            <ImageButton android:id="@id/btn_preset_page" android:visibility="visible" android:layout_width="90.0dip" android:layout_height="55.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/preset_page_button" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:id="@id/scanning_stoplayout" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <Button android:id="@id/btn_scanning_stop" android:padding="20.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/stop_scanning" android:singleLine="true" />
    </LinearLayout>
</merge>